fix some layout issues

--- a/src/scss/content/_logos.scss
+++ b/src/scss/content/_logos.scss
@@ -31,6 +31,10 @@
   }
 }
 
+.ds-logo-pull-left {
+  margin-left: -2.5rem;
+}
+
 a.ds-logo {
   color: var(--black);
   border: none;
